--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ ul{
 div{
   border-radius: 5px;
   border-color: black;
-  width: 30px;
+  width: 100px;
   border: 2px;
   text-align: center;
   margin: auto;
@@ -33,4 +33,5 @@ div{
 }
 a{
   color: white;
+  font-size: 30px;
 }
