--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,8 +45,8 @@ table{
   
 }
 h4{
-  color: black;
-  background-color: none;
+  color: white;
+  background-color: black;
   width: 600px; 
   
  
