--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,6 +57,7 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    text-align: center;
 }
 ul.topnav li {float: left;}
 }
