--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,6 +19,25 @@ h3{
   font-size: 25px;
   color: white;
 }
+a{
+ background-color: gray;
+  color: white;
+  font-size: 30px;
+  width: 20px;
+  font-family: Verdana;
+  
+}
+table{
+  border-radius: 10px;
+  border-color: gray;
+  height: 45px;
+  width: 600px;
+  margin: auto;
+  text-align: center;
+  background-color: gray;
+  
+  
+}
 
 
 a{
