--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1{
-  color: white;
+  color: black;
   text-align: center;
   font-size: 45px;
   font-family: Courier;
@@ -17,11 +17,11 @@ h3{
   font-family: Arial;
   text-align: center;
   font-size: 25px;
-  color: white;
+  color: black;
 }
 a{
- background-color: gray;
-  color: white;
+ background-color: none;
+  color: black;
   font-size: 30px;
   width: 20px;
   font-family: Verdana;
@@ -60,35 +60,9 @@ table{
   
 }
 h4{
-  color: white;
+  color: black;
   background-color: auto;
   width: 600px; 
   
  
 }
-ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    text-align: center;
-}
-ul.topnav li {float: left;}
-}
-ul.topnav li a {
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 17px;
-}
-
-
-ul.topnav li a:hover {background-color: #111;}
-
-
-ul.topnav li.icon {display: none;}
-
