--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,3 +41,37 @@ h4{
 #section{
   float: center;
 }
+ ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: gray;
+            position: fixed;
+            top: 0;
+            width: 100%;
+          }
+          li{
+            float: left;
+            border-right: 1px solid white;
+          }
+          li:last-child{
+            border-right: none;
+          }
+          a{
+            display: block;
+            padding: 8px;
+            
+          }
+          li a{
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+          }
+            li a:hover{
+              background-color: black;
+            }
+            .active{
+              background-color: green;
+            }
