--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,6 +53,7 @@ h4{
           li{
             float: left;
             border-right: 1px solid white;
+            font-size: 25px;
           }
           li:last-child{
             border-right: none;
