--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,8 +20,8 @@ h3{
 a{
  background-color: none;
   color: blue;
-  font-size: 30px;
-  width: 25px;
+  font-size: 20px;
+  width: auto;
   font-family: Verdana;
 }
 table{
