--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,7 @@ h4{
           }
           li{
             float: left;
-            border-right: 1px solid white;
+            border-right: 1px solid black;
             font-size: 25px;
             color: black;
           }
