--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,8 @@ body {
   background-image: url("http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg");
   background-repeat: no-repeat;
   background-position: top-center;
+  background-image: -webkit-filter: opacity(50%);filter: opacity(50%);
+  
 }
 h1{
   color: white;
@@ -75,4 +77,4 @@ li a:hover{
 .active{
   background-color: green;
 }
-.opacity {-webkit-filter: opacity(50%);filter: opacity(50%);}
+
