--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 
 
 body {
-  //*background-image: url("http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg");*//
+  background-image: url("http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg");
   background-repeat: no-repeat;
   background-position: top-center;
 }
