--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ body {
   background-image: url("http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg");
   background-repeat: no-repeat;
   background-position: top-center;
+  opacity: 50%;
 }
 h1{
   color: white;
