--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,8 +3,7 @@
 body {
   background-image: url("http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg");
   background-repeat: no-repeat;
-  background-position: top-center;
-  opacity: 50%;
+  background-position: top-center
 }
 h1{
   color: white;
@@ -76,4 +75,27 @@ li a:hover{
 .active{
   background-color: green;
 }
-.opacity {-webkit-filter: opacity(50%);filter: opacity(50%);}
+.content:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  
+  display: block;
+  background-image: url('http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg');
+  width: 100%;
+  height: 800px;
+  
+  -webkit-filter: opacity(150%);
+  filter: opacity(150%);
+}
+
+.content {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
