--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ h1{
   color: black;
   text-align: center;
   font-size: 45px;
-  font-family: Courier;
+  font-family: Verdana;
 }
 h3{
   font-family: Arial;
