--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ li a:hover{
   display: block;
   background-image: url('http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg');
   width: 100%;
-  height: 800px;
+  height: 100%;
   
   -webkit-filter: opacity(50%);
   filter: opacity(50%);
