--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,6 +90,6 @@ li a:hover{
   left: 0;
   right: 0;
   z-index: 0;
-  margin-left: 20px;
-  margin-right: 20px;
+  //*margin-left: 20px;
+  margin-right: 20px;*//
 }
