--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,12 +74,13 @@ li a:hover{
   position: fixed;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: 0;
   
   display: block;
   background-image: url('http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg');
   width: 100%;
   height: 100%;
+
   
   -webkit-filter: opacity(50%);
   filter: opacity(50%);
@@ -90,6 +91,6 @@ li a:hover{
   left: 0;
   right: 0;
   z-index: 0;
-  //*margin-left: 20px;
-  margin-right: 20px;*//
+  margin-left: 20px;
+  margin-right: 20px;
 }
