--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ table{
   width: 600px;
   margin: auto;
   text-align: center;
-  background-color: gray;
+  background-color: none;
 }
 h4{
   color: black;
