--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ a{
   font-size: 20px;
   width: auto;
   font-family: "Comic Sans MS";
-  display: block;
+  display: black;
   padding: 8px;
 }
 u a:hover{
