--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,7 @@ table{
 //*List code*//
 ul{
  list-style-type: none;
+ border: 1px solid black; 
  margin: 0;
  padding: 0;
  background-color: none;
