--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,9 +51,9 @@ table{
 //*List code*//
 ul{
  list-style-type: none;
- border: 1px solid black; 
  margin: 0;
  padding: 0;
+ overflow: hidden;
  background-color: none;
  position: fixed;
  top: 0;
@@ -76,8 +76,11 @@ li a{
 li a:hover{
   color: yellow;
 }
-.active{
-  background-color: green;
+li a:hover:not(.active){
+    background-color: #111;
+}
+.active {
+    background-color: #4CAF50;
 }
 .content:before {
   content: "";
