--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,6 +69,7 @@ li:last-child{
 li a{
   display: block;
   color: black;
+  font-family: "Comic Sans MS";
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
