--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,11 @@ h4{
   font-family:"Comic Sans MS";
 }
 //*"a" code*//
+a{
+  font-size: 20px;
+  color: blue;
+  font-family: "Comic Sans MS";
+}
 a:hover{
   color: yellow;
 }
