--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,10 @@ h4{
   font-family:"Comic Sans MS";
 }
 //*"a" code*//
-:hover{
+a{
+  font-family: "Comic Sans MS";
+}
+a:hover{
   color: yellow;
 }
 //*menu bar code*//
