--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,40 +42,30 @@ table{
 #section{
   float: center;
 }
-List code
-ul{
- list-style-type: none;
- margin: 0;
- padding: 0;
- overflow: hidden;
- background-color: none;
- position: fixed;
- top: 0;
- width: 100%;
+//*List code*//
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
-li{
-  float: left;
-  font-size: 25px;
+
+li {
+    float: left;
 }
-li:last-child{
- border-right: none;
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
-li a{
-  display: block;
-  color: black;
-  font-family: "Comic Sans MS";
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-li a:hover{
-  color: yellow;
-}
-li a:hover:not(.active){
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
     background-color: #111;
-}
-.active {
-    background-color: #4CAF50;
 }
 .content:before {
   content: "";
