--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,7 @@ ul {
     font-family: "Comic Sans MS";
     font-size: 25px;
     color: blue;
+    background color: gray;
 }
 
 li {
@@ -76,6 +77,7 @@ li a:hover:not(.active) {
 .active{
   font-size: 30px;
   color: yellow;
+  background-color: green;
 }
 .content:before {
   content: "";
