--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,13 +47,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    font-family: "Comic Sans MS";
-    font-size: 20px;
-    color: blue;
-}
-ul{
- background-color: #dddddd;
+    background-color: #dddddd
 }
 
 li {
