--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ li a:hover:not(.active) {
     color: yellow;
 }
 .active{
-  background-color: green;
+  text-decoration: underline;
 }
 li:last-child {
     border-right: none;
