--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,9 +49,10 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: gray;
 }
-
+ul{
+  background-color: gray;
+}
 li {
     float: left;
     font-family: "Comic Sans MS";
