--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,10 +118,12 @@ u{
 }
 span{
   color: white;
-  text-decoration: none;
 }
 span:hover{
   color: yellow;
   margin: 0;
   padding: 0;
+}
+a, u{
+  text-decoration: none;
 }
