--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ a:hover{
 //*menu bar code*//
 table{
   border-radius: 10px;
-  border-color: gray;
+  border-color: black;
   height: 45px;
   width: 600px;
   margin: auto;
