--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,7 +132,7 @@ font{
 font:hover{
   color: red;
 }
-.red{
+//*.red{
   border-color: red;
 }
 .blue{
@@ -150,3 +150,4 @@ font:hover{
 .brown{
   border-color: brown;
 }
+*//
