--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ a:hover{
 }
 //*menu bar code*//
 table, th, td {
- border: 1px solid black;
+ border: 1px solid blue;
  border-collapse: collapse;
  height: 45px;
   width: 600px;
@@ -132,22 +132,3 @@ font{
 font:hover{
   color: red;
 }
-//*.red{
-  border-color: red;
-}
-.blue{
-  border-color: blue;
-}
-.green{
-  border-color: green;
-}
-.purple{
-  border-color: purple;
-}
-.yellow{
-  border-color: yellow;
-}
-.brown{
-  border-color: brown;
-}
-*//
