--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,10 +32,11 @@ a:hover{
 }
 //*menu bar code*//
 table, th, td {
- border: 1px solid blue;
+ border-style: solid;
+ border-color: blue;
  border-collapse: collapse;
  height: 45px;
-  width: 600px;
+ width: 600px;
 }
 th, td {
     padding: 5px;
