--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ h4{
 //*"a" code*//
 a{
   font-family: "Comic Sans MS";
-  color: white;
+  color: black;
   text-decoration: none;
 }
 a:hover{
@@ -66,7 +66,7 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
