--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,3 +135,9 @@ font:hover{
 .blogli{
   background-color: none;
 }
+.side-bar{
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+}
