--- a/stylesheet.css
+++ b/stylesheet.css
@@ -138,4 +138,7 @@ font:hover{
 .side-right{
   background-color: none;
 }
-
+div.scroll {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
