--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,7 +62,7 @@ li {
     font-size: 20px;
     color: blue;
     list-style-type: none;
-    border-right: 1px solid white;
+    border-right: none;
 }
 
 li a {
