--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,6 +71,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-color: 1px solid white;
 }
 
 /* Change the link color to #111 (black) on hover */
