--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@ h1{
   text-align: center;
   font-size: 45px;
   font-family: "Comic Sans MS";
+   margin-top: 40vh;
 }
 h3{
   font-family: "Comic Sans MS";
