--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ h1{
   text-align: center;
   font-size: 45px;
   font-family: "Comic Sans MS";
-  margin-top: 40vh;
+  margin-top: 700px;
 }
 h3{
   font-family: "Comic Sans MS";
