--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,6 +27,7 @@ a{
   font-family: "Comic Sans MS";
   color: black;
   text-decoration: none;
+  margin-top: 700px;
 }
 a:hover{
   color: yellow;
