--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,6 +68,7 @@ li a {
     display: block;
     color: black;
     text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
     border-color: 1px solid white;
 }
