--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,7 +43,6 @@ table{
 th, td {
     padding: 5px;
 }
-}
 #section{
   float: center;
 }
@@ -54,7 +53,6 @@ ul {
     padding: 0;
     width: 100%;
 }
-
 li {
     float: left;
     font-family: "Comic Sans MS";
@@ -63,7 +61,6 @@ li {
     list-style-type: none;
     border-right: none;
 }
-
 li a {
     display: block;
     color: black;
@@ -73,7 +70,6 @@ li a {
     border-color: 1px solid white;
     position: center center;
 }
-
 /* Change the link color to #111 (black) on hover */
 li a:hover:not(.active) {
     color: yellow;
@@ -145,4 +141,12 @@ font:hover{
 .fadeIn {
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
+}
+body::-webkit-scrollbar {
+    width: 0.9em;
+    background-color: #ADD8E6
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #2c3e50;
+    outline: 1px solid #2c3e50;
 }
