--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,6 +94,7 @@ li:last-child {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center center;
   width: 100%;
   height: 100%;
 
