--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,9 +60,11 @@ li {
     color: blue;
     list-style-type: none;
     border-right: none;
+    display: inline;
 }
 li a {
     display: block;
+    display: inline;
     color: black;
     text-align: center;
     padding: 14px 16px;
