--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,3 +153,7 @@ body::-webkit-scrollbar-thumb {
     background-color: #2c3e50;
     outline: 1px solid #2c3e50;
 }
+img{
+  display: auto;
+  display: block;
+}
