--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,10 +60,10 @@ li {
     color: blue;
     list-style-type: none;
     border-right: none;
-    display: auto;
+    display: block;
 }
 li a {
-    display: auto;
+    display: block;
     color: black;
     text-align: center;
     padding: 14px 16px;
