--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,3 +155,11 @@ body::-webkit-scrollbar-thumb {
 img{
   display: block;
 }
+.projList{
+  font-family: "Comic Sans MS";
+  font-size: 20px;
+  color: black;
+}
+.projList:hover{
+  color: yellow;
+}
