--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,8 @@ body{
   margin-right: 200px;
   margin-left: 200px;
   background-image: url("http://www.pd4pic.com/images/forest-nature-trees-crowns-background-may.jpg");
-  width: 100%;
-  height: 100%;
+  width: 3000px;
+  height: 2000px;
 }
 //*The h family*//
 h1{
