--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 body{
   margin-right: 200px;
   margin-left: 200px;
-  background-image: url("http://www.pd4pic.com/images/forest-nature-trees-crowns-background-may.jpg");
-  width: 1000px;
-  height: 2000px;
+  background-image: url("http://ecx.images-amazon.com/images/I/C1BUR3BSE8S.png");
+  width: 100%;
+  height: 90%;
 }
 //*The h family*//
 h1{
