--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,8 @@ body{
   margin-right: 200px;
   margin-left: 200px;
   background-image: url("http://ecx.images-amazon.com/images/I/C1BUR3BSE8S.png");
-  width: 100%;
-  height: 90%;
+  width: 1920px;
+  height: 1200px;
 }
 //*The h family*//
 h1{
