--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,7 @@ li a:hover:not(.active) {
     color: yellow;
 }
 .active{
-  background-color: green;
+  background-color: #43C6DB;
 }
 li:last-child {
     border-right: none;
