--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,11 +124,11 @@ font:hover{
 }
 body::-webkit-scrollbar {
     width: 0.9em;
-    background-color: red;
+    background-color: #43C6DB;
 }
 body::-webkit-scrollbar-thumb {
-    background-color: #43C6DB;
-    outline: 1px solid #43C6DB;
+    background-color: blue;
+    outline: 1px solid blue;
 }
 img{
   display: block;
