--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,11 @@ body{
   margin-right: 100px;
   margin-left: 150px;
   background-image: url("http://ecx.images-amazon.com/images/I/C1BUR3BSE8S.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: gray;
   width: 1000px;
   height: 700px;
 }
