--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,17 +22,17 @@ h3{
   font-family: "Varela Round";
   text-align: center;
   font-size: 25px;
-  color: black;
+  color: white;
 }
 h4{
-  color: black;
+  color: white;
   background-color: auto;
   font-family:"Varela Round";
 }
 //*"a" code*//
 a{
   font-family: "Varela Round";
-  color: black;
+  color: white;
   text-decoration: none;
 }
 a:hover{
@@ -145,10 +145,3 @@ img{
 .projList:hover{
   color: yellow;
 }
-.coBlack{
-  color: black;
-  text-align: left;
-  font-weight: bold;
-}
-
-
