--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,10 +16,10 @@ h1{
   color: black;
   text-align: center;
   font-size: 45px;
-  font-family: "Comic Sans Ms";
+  font-family: Raleway, sans-serif;
 }
 h3{
-  font-family: "Comic Sans Ms";
+  font-family: Raleway, sans-serif;
   text-align: center;
   font-size: 25px;
   color: black;
@@ -27,7 +27,7 @@ h3{
 h4{
   color: black;
   background-color: auto;
-  font-family:"Comic Sans Ms";
+  font-family: Raleway, sans-serif;
 }
 //*"a" code*//
 a{
@@ -63,7 +63,7 @@ ul {
 }
 li {
     float: left;
-    font-family: "Comic Sans MS";
+    font-family:  Varela Round, sans-serif;
     font-size: 20px;
     color: blue;
     list-style-type: none;
@@ -100,7 +100,7 @@ img{
 
 u{
   color: blue;
-  font-family: "Comic Sans MS";
+  font-family:  Varela Round, sans-serif;
 }
 span{
   color: gray;
@@ -144,4 +144,11 @@ img{
 }
 .projList:hover{
   color: yellow;
+}
+.coBlack{
+  color: black;
+  font-size: 40px;
+}
+content{
+  font-family: Varela Round, sans-serif;
 }
