--- a/stylesheet.css
+++ b/stylesheet.css
@@ -128,4 +128,8 @@ img{
   color: black;
   font-size: 30px;
 }
-
+.intro{
+  background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
+  width: 100%;
+  height: 100%;
+}
