--- a/stylesheet.css
+++ b/stylesheet.css
@@ -130,6 +130,6 @@ img{
 }
 .intro{
   background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
-  width: 100%;
-  height: 100%;
+  width: 900px;
+  height: 600px;
 }
