--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,6 +132,11 @@ img{
   background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
   width: 1200px;
   height: 900%;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.upper{
+  color: white;
+  height: 5px;
+  width: 10px;
 }
