--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,8 +136,100 @@ img{
   margin-right: 0px;
   text-align: center;
 }
-.upper{
-  color: black;
-  height: 10px;
-  width: 20px;
+ .bar {
+    position: fixed;
+    top: 6vh;
+    right: 5%;
+    height: 29px;
+    width: 35px;
+    cursor: pointer;
+    z-index: 999;
+}
+
+.bar span {
+    background: black;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    -webkit-transition: .54s;
+    -moz-transition: .54s;
+    -o-transition: .54s;
+    transition: .54s;
+}
+
+.upper {
+    top: 1px;
+}
+
+.middle {
+    top: 11px;
+}
+
+.bottom {
+    top: 21px;
+}
+
+.bar.active .top {
+    top: 11px;
+    
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg); 
+    transform: rotate(-45deg);
+}
+
+.bar.active .middle {
+    opacity: 0;
+}
+
+.bar.active .bottom {
+    top: 11px;
+    
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg); 
+    transform: rotate(45deg);
+}
+
+.myMenu {
+    top: 0;
+    background: gray repeat left top;
+    right: -100%;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    -webkit-transition: .55s;
+    -moz-transition: .55s;
+    -o-transition: .55s;
+    transition: .55s;
+    opacity:0.9;
+    z-index: 99;
+}
+
+.myMenu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.myMenu li {
+    text-align: left;
+    text-align: center;
+    margin-top: 30vh;
+}
+
+.myMenu li:hover {
+    color: yellow;
+}
+
+.myMenu a {
+    color: rgb(220, 220, 220);
+    font-size: 30px;
+    text-decoration: none;
+    text-transform: uppercase;
+    opacity: 1;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    font-family: Quicksand, sans-serif;
 }
