--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,4 +136,106 @@ img{
   margin-right: 0px;
   text-align: center;
 }
+.nav-icon {
+    position: fixed;
+    top: 6vh;
+    right: 5%;
+    height: 29px;
+    width: 35px;
+    cursor: pointer;
+    z-index: 999;
+}
 
+.nav-icon span {
+    background: black;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    -webkit-transition: .55s;
+    -moz-transition: .55s;
+    -o-transition: .55s;
+    transition: .55s;
+}
+
+.top {
+    top: 1px;
+}
+
+.middle {
+    top: 11px;
+}
+
+.bottom {
+    top: 21px;
+}
+
+.nav-icon.active .top {
+    top: 11px;
+    
+    -ms-transform: rotate(-495deg);
+    -webkit-transform: rotate(-495deg); 
+    transform: rotate(-495deg);
+}
+
+.nav-icon.active .middle {
+    opacity: 0;
+}
+
+.nav-icon.active .bottom {
+    top: 11px;
+    
+    -ms-transform: rotate(495deg);
+    -webkit-transform: rotate(495deg); 
+    transform: rotate(495deg);
+}
+
+.menu-bar {
+    top: 0;
+    background:  #008080 repeat left top;
+    right: -100%;
+    height: 100%;
+    position: fixed;
+    width: 400px;
+    -webkit-transition: .50s;
+    -moz-transition: .50s;
+    -o-transition: .50s;
+    transition: .50s;
+    opacity: 0.5;
+    z-index: 99;
+}
+
+.menu-bar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-bar li {
+    text-align: left;
+    text-align: center;
+    margin-top: 35vh;
+}
+
+.menu-bar li:hover {
+    font-weight:bold;
+}
+
+.menu-bar a {
+    color: rgb(220, 220, 220);
+    font-size: 30px;
+    text-decoration: none;
+    opacity: 1;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    font-family: Candara, sans-serif;
+}
+.menu-bar a:hover{
+  color:yellow;
+  font-size: 40px;
+}
+.show {
+    right: 0;   
+}
