--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ h4{
 }
 //*"a" code*//
 a{
-  font-family: "Comic Sans Ms";
+  font-family: "Candara", sans-serif;
   color: black;
   text-decoration: none;
 }
