--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,11 +110,14 @@ img{
   display: block;
 }
 .projList{
-  font-family: "Verdan", sans-serif;
+  font-family: "Verdana", sans-serif;
   font-size: 20px;
+  background-color: black;
+  color:white;
 }
 .projList:hover{
   color: yellow;
+  font-size: 25px;
 }
 .coBlack{
   color: black;
