--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,13 +70,6 @@ li:last-child {
 }
 
 
-  
-}
-
-u{
-  color: blue;
-  font-family:  Verdana, sans-serif;
-}
 span{
   color: gray;
 }
@@ -112,16 +105,22 @@ img{
 .projList{
   font-family: "Verdana", sans-serif;
   font-size: 20px;
-  background-color: black;
-  color:white;
+  color:black;
+}
+.projList a{
+  color: white;
 }
 .projList:hover{
   color: yellow;
   font-size: 25px;
 }
 .coBlack{
-  color: black;
+  color: white;
   font-size: 30px;
+  font-family: "Verdana", sans-serif;
+}
+.mainPage-text{
+  padding-bottom: 30px;
 }
 .background{
   background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
