--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,15 @@
 body{
   margin-right: 0px;
   margin-left: 0px;
+  background-color: #D1D0CE;
 }
 //*The h family*//
 h1{
   color: black;
   text-align: center;
   font-size: 45px;
-  font-family: "Candara", sans-serif;
+  font-family: Raleway, sans-serif;
+  -top: 40vh;
 }
 h3{
   font-family: "Candara", sans-serif;
@@ -33,42 +35,12 @@ a:hover{
 #section{
   float: center;
 }
-//*List code*//
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-li {
-    float: left;
-    font-family:  "Candara",sans-serif;
-    font-size: 20px;
-    color: blue;
-    list-style-type: none;
-    border-right: none;
-    display: block;
-}
-li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    border-color: 1px solid white;
-    position: center center;
-}
-/* Change the link color to #111 (black) on hover */
 li a:hover:not(.active) {
     color: yellow;
 }
 .active{
   background-color: #43C6DB;
 }
-li:last-child {
-    border-right: none;
-}
-
 
 span{
   color: gray;
@@ -103,33 +75,35 @@ img{
   display: block;
 }
 .projList{
-  font-family: "Verdana", sans-serif;
   font-size: 20px;
   background-color: none;
+   padding-bottom: 50px;
 }
 .projList a{
   color: black;
+  text-align: left;
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
+  transition: 0.8s;
+  font-size: 30px;
+  font-family: "Candara", sans-serif;
 }
 .projList a:hover{
-  color: yellow;
-  font-size: 25px;
-}
-.coBlack{
-  color: white;
-  font-size: 30px;
-  font-family: "Verdana", sans-serif;
+  color: #1589FF;
+  font-size: 35px;
 }
 .mainPage-text{
-  padding-bottom: 30px;
+  padding-bottom: 200px;
 }
 .background{
   background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
-  width: 1348px;
+  width: 1352px;
   height: 900%;
   margin-left: 0px;
   margin-right: 0px;
   text-align: center;
-  margin-top: 0px;
+  padding-top: 0px;
 }
 .menu-icon{
   height: 29px;
@@ -220,7 +194,7 @@ img{
   color:yellow;
   font-size:50px;
 }
-.spacers{
-  background-color: white;
-  padding-bottom: 200px;
+.background-proj{
+  padding-top: 200px;
+  background-color: #D1D0CE;
 }
