--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,6 +77,7 @@ img{
   font-size: 20px;
   background-color: none;
    padding-bottom: 50px;
+   padding-left: 20px;
 }
 .projList a{
   color: black;
