--- a/stylesheet.css
+++ b/stylesheet.css
@@ -426,6 +426,7 @@ img{
   text-align:center;
   font-family: "Candara",sans-serif;
   font-size: 25px;
+  padding-bottom: 600px;
 }
 .projList{
   font-family: "Candara",sans-serif;
