--- a/stylesheet.css
+++ b/stylesheet.css
@@ -421,6 +421,7 @@ img{
 .title-blog{
   text-align:center;
   font-family: "Verdana", sans-serif;
+  padding-top: 200px;
 }
 .p-blog{
   text-align:center;
