--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,7 +102,7 @@ img{
 }
 .background{
   background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
-  width: 1352px;
+  width: 100%;
   height: 900%
   text-align: center;
   padding-top: 0px;
