--- a/stylesheet.css
+++ b/stylesheet.css
@@ -309,7 +309,7 @@ img{
   font-size: 40px
 }
 .background{
-  background-image: url("http://www.hdbloggers.net/wp-content/uploads/2016/01/Background.png");
+  background-image: url("http://www.staywallpaper.com/wp-content/uploads/2016/01/cool-background-STAY018.jpg");
   width: 1352px;
   height: 900%
   text-align: center;
