--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ img{
   font-size: 40px
 }
 .background{
-  background-image: url("http://www.staywallpaper.com/wp-content/uploads/2016/01/cool-background-STAY018.jpg");
+  background-image: url("http://4hdwallpapers.com/wp-content/uploads/2013/04/Waterfall-Nature-Wallpaper.jpg");
   width: 100%;
   height: 900%
   text-align: center;
@@ -309,7 +309,7 @@ img{
   font-size: 40px
 }
 .background{
-  background-image: url("http://www.staywallpaper.com/wp-content/uploads/2016/01/cool-background-STAY018.jpg");
+  background-image: url("http://4hdwallpapers.com/wp-content/uploads/2013/04/Waterfall-Nature-Wallpaper.jpg");
   width: 1352px;
   height: 900%
   text-align: center;
